BufferObminy/buffer.txt
package interface;

public class CardPay implements PayInterface {

    @Override
    void pay(int a){
        System.out.println("CarD pay: "+ a + " money");
    }

}

CardPay.java:1: error: <identifier> expected
package interface;
       ^
CardPay.java:1: error: <identifier> expected
package interface;
                 ^
CashPay.java:1: error: <identifier> expected
package interface;
       ^
CashPay.java:1: error: <identifier> expected
package interface;
                 ^
Main.java:1: error: <identifier> expected
package interface;
       ^
Main.java:1: error: <identifier> expected
package interface;
                 ^
Main.java:3: error: class, interface, enum, or record expected
import ~/Education/Java/SmallProblems
^
PayInterface.java:1: error: <identifier> expected
package interface;
       ^
PayInterface.java:1: error: <identifier> expected
package interface;
